--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,31 +1,16 @@
-
 <!DOCTYPE html>
 <html>
 <head>
     <!-- Standard Meta -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <!-- Site Properties -->
-    <title>Homepage - Semantic</title>
-    <link rel="stylesheet" type="text/css" href="dist/components/reset.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/site.css">
-
-    <link rel="stylesheet" type="text/css" href="dist/components/container.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/grid.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/header.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/image.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/menu.css">
-
-    <link rel="stylesheet" type="text/css" href="dist/components/divider.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/dropdown.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/segment.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/button.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/list.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/icon.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/sidebar.css">
-    <link rel="stylesheet" type="text/css" href="dist/components/transition.css">
+    <title>Narakai Studio</title>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link href="https://cdn.bootcss.com/semantic-ui/2.2.10/semantic.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/semantic-ui/2.2.10/semantic.min.js"></script>
 
     <style type="text/css">
 
@@ -37,18 +22,22 @@
             min-height: 700px;
             padding: 1em 0em;
         }
+
         .masthead .logo.item img {
             margin-right: 1em;
         }
+
         .masthead .ui.menu .ui.button {
             margin-left: 0.5em;
         }
+
         .masthead h1.ui.header {
             margin-top: 3em;
             margin-bottom: 0em;
             font-size: 4em;
             font-weight: normal;
         }
+
         .masthead h2 {
             font-size: 1.7em;
             font-weight: normal;
@@ -57,19 +46,24 @@
         .ui.vertical.stripe {
             padding: 8em 0em;
         }
+
         .ui.vertical.stripe h3 {
             font-size: 2em;
         }
+
         .ui.vertical.stripe .button + h3,
         .ui.vertical.stripe p + h3 {
             margin-top: 3em;
         }
+
         .ui.vertical.stripe .floated.image {
             clear: both;
         }
+
         .ui.vertical.stripe p {
             font-size: 1.33em;
         }
+
         .ui.vertical.stripe .horizontal.divider {
             margin: 3em 0em;
         }
@@ -77,6 +71,7 @@
         .quote.stripe.segment {
             padding: 0em;
         }
+
         .quote.stripe.segment .grid .column {
             padding-top: 5em;
             padding-bottom: 5em;
@@ -94,20 +89,25 @@
             .ui.fixed.menu {
                 display: none !important;
             }
+
             .secondary.pointing.menu .item,
             .secondary.pointing.menu .menu {
                 display: none;
             }
+
             .secondary.pointing.menu .toc.item {
                 display: block;
             }
+
             .masthead.segment {
                 min-height: 350px;
             }
+
             .masthead h1.ui.header {
                 font-size: 2em;
                 margin-top: 1.5em;
             }
+
             .masthead h2 {
                 margin-top: 0.5em;
                 font-size: 1.5em;
@@ -117,27 +117,21 @@
 
     </style>
 
-    <script src="dist/jquery-3.2.1.min.js"></script>
-    <script src="dist/components/visibility.js"></script>
-    <script src="dist/components/sidebar.js"></script>
-    <script src="dist/components/transition.js"></script>
     <script>
         $(document)
-            .ready(function() {
-
+            .ready(function () {
                 // fix menu when passed
                 $('.masthead')
                     .visibility({
                         once: false,
-                        onBottomPassed: function() {
+                        onBottomPassed: function () {
                             $('.fixed.menu').transition('fade in');
                         },
-                        onBottomPassedReverse: function() {
+                        onBottomPassedReverse: function () {
                             $('.fixed.menu').transition('fade out');
                         }
                     })
                 ;
-
                 // create sidebar and attach to menu open
                 $('.ui.sidebar')
                     .sidebar('attach events', '.toc.item')
@@ -177,7 +171,6 @@
     <a class="item">Signup</a>
 </div>
 
-
 <!-- Page Contents -->
 <div class="pusher">
     <div class="ui inverted vertical masthead center aligned segment">
@@ -213,9 +206,11 @@
             <div class="row">
                 <div class="eight wide column">
                     <h3 class="ui header">We Help Companies and Companions</h3>
-                    <p>We can give your company superpowers to do things that they never thought possible. Let us delight your customers and empower your needs...through pure data analytics.</p>
+                    <p>We can give your company superpowers to do things that they never thought possible. Let us
+                        delight your customers and empower your needs...through pure data analytics.</p>
                     <h3 class="ui header">We Make Bananas That Can Dance</h3>
-                    <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be bioengineered.</p>
+                    <p>Yes that's right, you thought it was the stuff of dreams, but even bananas can be
+                        bioengineered.</p>
                 </div>
                 <div class="six wide right floated column">
                     <img src="assets/images/wireframe/white-image.png" class="ui large bordered rounded image">
@@ -240,7 +235,8 @@
                 <div class="column">
                     <h3>"I shouldn't have gone with their competitor."</h3>
                     <p>
-                        <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer Acme Toys
+                        <img src="assets/images/avatar/nan.jpg" class="ui avatar image"> <b>Nan</b> Chief Fun Officer
+                        Acme Toys
                     </p>
                 </div>
             </div>
@@ -250,13 +246,16 @@
     <div class="ui vertical stripe segment">
         <div class="ui text container">
             <h3 class="ui header">Breaking The Grid, Grabs Your Attention</h3>
-            <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic and worth your attention.</p>
+            <p>Instead of focusing on content creation and hard work, we have learned how to master the art of doing
+                nothing by providing massive amounts of whitespace and generic content that can seem massive, monolithic
+                and worth your attention.</p>
             <a class="ui large button">Read More</a>
             <h4 class="ui horizontal header divider">
                 <a href="#">Case Studies</a>
             </h4>
             <h3 class="ui header">Did We Tell You About Our Bananas?</h3>
-            <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
+            <p>Yes I know you probably disregarded the earlier boasts as non-sequitur filler content, but its really
+                true. It took years of gene splicing and combinatory DNA research, but our bananas can really dance.</p>
             <a class="ui large button">I'm Still Quite Interested</a>
         </div>
     </div>
