--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
     <!-- Site Properties -->
-    <title>Narakai Studio | 个人网站</title>
+    <title>Narakai Studio</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.bootcss.com/semantic-ui/2.2.10/semantic.min.css" rel="stylesheet">
     <script src="https://cdn.bootcss.com/semantic-ui/2.2.10/semantic.min.js"></script>
@@ -34,13 +34,10 @@
 <!-- Swiper -->
 <div class="swiper-container">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">
-            <img src="/images/0.jpg">
-        </div>
-        <div class="swiper-slide">
-            <div class="swiper-slide">
-                <img src="/images/1.jpg">
-            </div>
+        <div class="swiper-slide" th:each="carouselPic : ${carouselPics}">
+            <a th:href="@{/view(u=${carouselPic.value})}">
+                <img th:src="${carouselPic.image}"/>
+            </a>
         </div>
     </div>
     <!-- 如果需要分页器 -->
@@ -86,14 +83,14 @@
                 <p>本站资源来源于互联网解析，仅供学习参考，请勿用于商业用途，违者必究！</p>
                 <div class="ui labeled button" tabindex="0">
                     <div class="ui red button"><i class="heart icon"></i> Like</div>
-                    <a class="ui basic red left pointing label" href="https://github.com/ChinaSilence/any-video"
+                    <a class="ui basic red left pointing label" href="https://github.com/narakai"
                        target="_blank">
                         1,024
                     </a>
                 </div>
                 <div class="ui labeled button" tabindex="0">
                     <div class="ui basic blue button"><i class="fork icon"></i> Forks</div>
-                    <a class="ui basic left pointing blue label" href="https://github.com/ChinaSilence/any-video"
+                    <a class="ui basic left pointing blue label" href="https://github.com/narakai"
                        target="_blank">
                         1,024
                     </a>
