--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://cdn.bootcss.com/vue/2.5.3/vue.min.js"></script>
+    <!--<script src="https://cdn.bootcss.com/vue/2.5.3/vue.min.js"></script>-->
 </head>
 
 <body>
@@ -76,7 +76,7 @@
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">注册</a>
+                            <a href="/register">注册</a>
                         </li>
                         <li>
                             <a href="/login">登录</a>
@@ -221,8 +221,8 @@
 <!--Vue test-->
 
 <!--<div id="app-5">-->
-<!--<p>{{ message }}</p>-->
-<!--<button v-on:click="reverseMessage">逆转消息</button>-->
+    <!--<p>{{ message }}</p>-->
+    <!--<button v-on:click="reverseMessage">逆转消息</button>-->
 <!--</div>-->
 
 <!--<div id="app-2">-->
@@ -232,38 +232,37 @@
 <!--</div>-->
 
 <!--<div id="app-6">-->
-<!--<p>{{ message }}</p>-->
-<!--<input v-model="message">-->
+    <!--<p>{{ message }}</p>-->
+    <!--<input v-model="message">-->
 <!--</div>-->
-</div>
 </body>
 
 <script>
-    //    var app2 = new Vue({
-    //        el: '#app-2',
-    //        data: {
-    //            message: '页面加载于 ' + new Date().toLocaleString()
-    //        }
-    //    })
-    //
-    //    var app5 = new Vue({
-    //        el: '#app-5',
-    //        data: {
-    //            message: 'Hello Vue.js!'
-    //        },
-    //        methods: {
-    //            reverseMessage: function () {
-    //                this.message = this.message.split('').reverse().join('')
-    //            }
-    //        }
-    //    })
-    //
-    //    var app6 = new Vue({
-    //        el: '#app-6',
-    //        data: {
-    //            message: 'Hello Vue!'
-    //        }
-    //    })
+//    var app2 = new Vue({
+//        el: '#app-2',
+//        data: {
+//            message: '页面加载于 ' + new Date().toLocaleString()
+//        }
+//    })
+//
+//    var app5 = new Vue({
+//        el: '#app-5',
+//        data: {
+//            message: 'Hello Vue.js!'
+//        },
+//        methods: {
+//            reverseMessage: function () {
+//                this.message = this.message.split('').reverse().join('')
+//            }
+//        }
+//    })
+//
+//    var app6 = new Vue({
+//        el: '#app-6',
+//        data: {
+//            message: 'Hello Vue!'
+//        }
+//    })
 </script>
 
 </html>
