--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8"/>
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Site Properties -->
-    <title>Narakai Studio | 登录</title>
+    <title>Narakai Studio | 注册</title>
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
@@ -22,41 +22,49 @@
     <div class="row">
         <div class="col-md-12">
             <div style="margin-bottom: 50px;">
-                <img src="/images/login.jpg" class="img-responsive center-block" width="300" height="300" alt="Logo" />
+                <img src="/images/login.jpg" class="img-responsive center-block" width="300" height="300" alt="Logo"/>
             </div>
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" action="#" th:action="@{/register}" th:object="${user}" method="post">
                 <div class="form-group">
                     <label for="inputUsername" class="col-sm-2 control-label">
                         Username
                     </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputUsername" name="username" placeholder = "请输入您的用户名"/>
+                        <input type="text" class="form-control" id="inputUsername" name="nickname"
+                               placeholder="请输入您的用户名" th:field="*{nickname}"/>
                     </div>
                 </div>
-                <div class="form-group">
 
+                <div class="form-group">
                     <label for="inputPassword" class="col-sm-2 control-label">
                         Password
                     </label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword" name="password" placeholder = "请输入您的密码"/>
+                        <input type="password" class="form-control" id="inputPassword" name="password"
+                               placeholder="请输入您的密码" th:field="*{password}"/>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <div class="checkbox">
 
-                            <label>
-                                <input type="checkbox" /> Remember me
-                            </label>
-                        </div>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">
+                        Gender
+                    </label>
+                    <div class="col-sm-10">
+                        <label>
+                            <select th:field="*{gender}">
+                                <option th:value="男"
+                                        >男</option>
+                                <option th:value="女"
+                                        >女</option>
+                            </select>
+                        </label>
                     </div>
                 </div>
+
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-
                         <button type="submit" class="btn btn-default">
-                            Sign in
+                            Sign up
                         </button>
                     </div>
                 </div>
@@ -75,7 +83,7 @@
                 validating: 'glyphicon glyphicon-refresh'
             },
             fields: {
-                username: {
+                nickname: {
                     message: '用户名验证失败',
                     validators: {
                         notEmpty: {
