--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <!-- Standard Meta -->
     <meta charset="utf-8"/>
@@ -24,13 +24,14 @@
             <div style="margin-bottom: 50px;">
                 <img src="/images/login.jpg" class="img-responsive center-block" width="300" height="300" alt="Logo" />
             </div>
-            <form class="form-horizontal" role="form">
+            <form class="form-horizontal" role="form" action="#" th:action="@{/login.html}" th:object="${user}" method="post">
                 <div class="form-group">
                     <label for="inputUsername" class="col-sm-2 control-label">
                         Username
                     </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputUsername" name="username" placeholder = "请输入您的用户名"/>
+                        <input type="text" class="form-control" id="inputUsername" name="nickname"
+                               placeholder = "请输入您的用户名" th:field="*{nickname}"/>
                     </div>
                 </div>
                 <div class="form-group">
@@ -39,7 +40,8 @@
                         Password
                     </label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword" name="password" placeholder = "请输入您的密码"/>
+                        <input type="password" class="form-control" id="inputPassword" name="password"
+                               placeholder = "请输入您的密码" th:field="*{password}"/>
                     </div>
                 </div>
                 <div class="form-group">
@@ -75,7 +77,7 @@
                 validating: 'glyphicon glyphicon-refresh'
             },
             fields: {
-                username: {
+                nickname: {
                     message: '用户名验证失败',
                     validators: {
                         notEmpty: {
