--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -24,7 +24,7 @@
             <div style="margin-bottom: 50px;">
                 <img src="/images/login.jpg" class="img-responsive center-block" width="300" height="300" alt="Logo"/>
             </div>
-            <form class="form-horizontal" role="form" action="#" th:action="@{/register}" th:object="${user}" method="post">
+            <form class="form-horizontal" role="form" action="#" th:action="@{/register.html}" th:object="${user}" method="post">
                 <div class="form-group">
                     <label for="inputUsername" class="col-sm-2 control-label">
                         Username
